little things for accessibility

--- a/css/style.css
+++ b/css/style.css
@@ -128,10 +128,12 @@ a:hover {
 }
 .contacts {
   display: flex;
+  width: 85%;
   flex-direction: column;
   align-items: center;
 }
 .contacts li {
+  width: 100%;
   margin-top: 30px;
   text-align: center;
 }
@@ -144,6 +146,12 @@ a:hover {
 .contacts a:hover,
 .contacts a:focus {
   color: var(--colorize);
+  transition: color 0.3s;
+}
+.contacts a:focus p.name-link {
+  display: inline-block;
+  border-bottom: 1px solid wheat;
+  transition: all 0.3s;
 }
 
 .section {
