--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ a:hover {
 }
 .numbers {
   font-family: 'Lato', sans-serif;
+  font-weight: 700;
 }
 
 
@@ -171,10 +172,11 @@ a:hover {
   padding: 30px;
 }
 
+/* expertise */
 .expertise-list {
   padding: 30px;
 }
-.expertise-num {
+.list-num {
   display: inline-block;
   margin-right: 16px;
 }
@@ -184,4 +186,30 @@ a:hover {
 .expertise-list > li > p {
   margin-left: 40px;
   padding-top: 12px;
+}
+
+/* skills */
+.skills-list {
+  padding: 30px;
+}
+.skills-list > li {
+  margin-bottom: 24px;
+}
+.numbers .smaller {
+  font-size: 12px;
+  font-weight: 300;
+}
+.progress-bar {
+  margin-top: 12px;
+  width: 100%;
+  height: 5px;
+  position: relative;
+  background-color: #464747;
+}
+.progress {
+  position: absolute;
+  width: 1%;
+  height: 5px;
+  background-color: var(--colorize);
+  transition: all 1s;
 }
