--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,21 @@ a:hover {
   /* height: 160px; */
   border-radius: 50%;
 }
-
+.resp-desc-box {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  /* outline: 1px dotted wheat; */
+}
+.resp-desc-name {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+}
 .box-first-name {
   margin-top: 28px;
   height: 43px;
