--- a/css/style.css
+++ b/css/style.css
@@ -348,3 +348,44 @@ a:hover {
   left: 22px;
   top: 13px;
 }
+
+.footer {
+  margin-bottom: 20px;
+}
+.footer .contacts {
+  display: flex;
+  width: 100%;
+  margin: 0;
+}
+.footer .contacts li {
+  height: 60px;
+  margin-top: 10px;
+}
+.footer .box-header-bar {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.footer .box-socials {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 20px 0 0 0;
+  padding: 0;
+}
+.resp-footer-box {
+  width: 100%;
+}
+.resp-footer-name {
+  display: flex;
+  flex-direction: column;
+}
+.footer-first-name {
+  margin-top: 20px;
+  height: 43px;
+  text-align: center;
+}
+.footer-last-name {
+  height: 40px;
+  text-align: center;
+}
