--- a/css/style.css
+++ b/css/style.css
@@ -351,6 +351,7 @@ a:hover {
 
 .footer {
   margin-bottom: 20px;
+  justify-content: flex-start;
 }
 .footer .contacts {
   display: flex;
@@ -374,6 +375,7 @@ a:hover {
   padding: 0;
 }
 .resp-footer-box {
+  margin-top: 30px;
   width: 100%;
 }
 .resp-footer-name {
