--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,41 @@ a:hover {
   top: 13px;
 }
 
+/* PORTFOLIO */
+.portfolio__gallery {
+  display: flex;
+  flex-direction: column;
+  padding: 0 30px 30px 30px;
+}
+.portfolio__gallery > li {
+  margin-top: 30px;
+  background-size: 100%;
+  box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.9);
+  transition: all 0.7s;
+}
+.portfolio__gallery > li img {
+  opacity: 0;
+}
+
+.portfolio__gallery > li:hover {
+  /* box-shadow: inset 0px 0px 300px rgba(0, 0, 0, 0.9); */
+  background-size: 101%;
+}
+.portfolio__gallery > li > a {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.test1 {
+  background-image: url("../img/gallery/1.jpg");
+  background-position: center center;
+  background-size: cover;
+  width: 100%;
+  height: 300px;
+  box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.9);
+}
+
+/* CONTACTS */
 .footer {
   margin-bottom: 20px;
   justify-content: flex-start;
