--- a/css/style.css
+++ b/css/style.css
@@ -356,17 +356,25 @@ a:hover {
   padding: 0 30px 30px 30px;
 }
 .portfolio__gallery > li {
+  position: relative;
   margin-top: 30px;
   background-size: 100%;
   box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.9);
   transition: all 0.7s;
 }
+.portfolio__gallery > li a {
+  opacity: 0;
+  background-color: rgb(0, 0, 0);
+  transition: all 0.7s;
+}
 .portfolio__gallery > li img {
   opacity: 0;
 }
-
 .portfolio__gallery > li:hover {
-  /* box-shadow: inset 0px 0px 300px rgba(0, 0, 0, 0.9); */
+  background-size: 101%;
+}
+.portfolio__gallery > li:hover a {
+  opacity: 0.5;
   background-size: 101%;
 }
 .portfolio__gallery > li > a {
@@ -374,13 +382,26 @@ a:hover {
   height: 100%;
   display: block;
 }
-.test1 {
-  background-image: url("../img/gallery/1.jpg");
-  background-position: center center;
-  background-size: cover;
-  width: 100%;
-  height: 300px;
-  box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.9);
+.portfolio__intro {
+  position: absolute;
+  width: 80%;
+  top: 20px;
+  left: 20px;
+  color: white;
+  opacity: 0;
+}
+.portfolio__gallery > li:hover .portfolio__intro {
+  opacity: 1;
+}
+.underline {
+  width: 0px;
+  border: 1px solid white;
+  transition: all 0.7s;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.portfolio__gallery > li:hover .underline {
+  width: 50px;
 }
 
 /* CONTACTS */
